changed home link

--- a/canvas.html
+++ b/canvas.html
@@ -16,7 +16,7 @@
         <div class="bluemode">
             <div class="space-s wide">
                 <br class="large">
-                <a class="unselectable link" href="index.html">🡸 Home</a>
+                <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                 <br class="small">
                 <!-- <h1>Redesigning Canvas, an e-learning platform</h1> -->
                 <!-- <i>
@@ -238,7 +238,7 @@
         <div class="parallax-group bluemode static">
             <div class="space-s wide">
                 <br class="large">
-                <a class="unselectable link" href="index.html">🡸 Home</a>
+                <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                 <br class="small">
                 <!-- <h1>Redesigning Canvas, an e-learning platform</h1> -->
                 <!-- <i>
