--- a/filwordnet.html
+++ b/filwordnet.html
@@ -16,12 +16,12 @@
         <div class="normal center page">
             <div>
                 <br class="large">
-                <a class="unselectable link" href="index.html">🡸 Home</a>
+                <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                 <br class="small">
                 <h1>One part of our thesis required us to gather annotations from volunteers.</h1>
                 <p>To help speed up the process, we built an annotation tool, where volunteers would be grouping together sentences based on the meaning (or sense) of a certain word in the sentence.</p>
 
-                <p>I handled most of the development. Its basic features are being able to sign up, log in, create annotations, and log out. We used NextJS for the front-end and back-end, MongoDB for the database, and Vercel for deployment. The design is kept simple as people of different age groups will be using the tool.</p>
+                <p>Its basic features are being able to sign up, log in, create annotations, and log out. We used NextJS for the front-end and back-end, MongoDB for the database, and Vercel for deployment. The design is kept simple as people of different age groups will be using the tool.</p>
                 <br class="large">
             </div>
         </div>
@@ -104,7 +104,7 @@
             <div class="normal center page">
                 <div>
                     <br class="large">
-                    <a class="unselectable link" href="index.html">🡸 Home</a>
+                    <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                     <br class="small">
                     <h1>One part of our thesis required us to gather annotations from volunteers.</h1>
                     <p>To help speed up the process, we built an annotation tool, where volunteers would be grouping together sentences based on the meaning (or sense) of a certain word in the sentence.</p>
