--- a/mangan.html
+++ b/mangan.html
@@ -16,7 +16,7 @@
         <div class="bluemode">
             <div class="normal center">
                 <br class="large">
-                <a class="unselectable link" href="index.html">🡸 Home</a>
+                <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                 <br class="small">
                 <h1>One common problem I’ve encountered is coming up with grocery lists.</h1>
     
@@ -143,7 +143,7 @@
             <br class="large">
             <div class="normal center">
                 <br class="small">
-                <a class="unselectable link" href="index.html">🡸 Home</a>
+                <a class="unselectable link" href="index.html#projects">🡸 Home</a>
                 <br class="small">
                 <h1>One common problem I’ve encountered is coming up with grocery lists.</h1>
     
