edited experience section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <h3>Center For Complexity & Emerging Technologies</h3>
                             <p>— Research Assisstant</p>
                         </span>
-                        <p>2021 – 2022</p>
+                        <p>2021 – now</p>
                     </div>
                     <hr>
                 </article>
@@ -185,10 +185,10 @@
                 <article class="slide-up">
                     <div class="education-container">
                         <span>
-                            <h3>Computer Studies Government</h3>
-                            <p>— Publicity and Creatives Executive</p>
+                            <h3>Google Developers Club De La Salle University</h3>
+                            <p>— Design Lead</p>
                         </span>
-                        <p>2019</p>
+                        <p>2020 – 2021</p>
                     </div>
                     <hr>
                 </article>
