changed pngs to gifs

--- a/canvas.html
+++ b/canvas.html
@@ -89,23 +89,13 @@
                         <li><p><b>Condense multiple sections in courses, emphasizing the Modules page.</b> This establishes uniformity across all courses, hopefully making it less confusing for users and prevent users like Achiever Alexandria from running through every section of Canvas for assignments.</p></li>
                         <li><p><b>Add a filter option in the Modules page </b> for situations wherein the user is looking for a certain item type, such as assignments or discussion boards. This would also allow batch downloading of files.</p></li>
                         <div class="text-center">
-                            <img src="assets/canvas/navigation-1.png"/>
+                            <img src="assets/canvas/navigation-1.gif"/>
                             <br>
-                            <small>Course home page with filter options. Other sections were also condensed.</small>
+                            <small>Course home page with filter options. Other sections were also condensed. Selected files can be downloaded.</small>
                         </div>
                         <li><p><b>Add a separate section for settings, and move Notification Settings there.</b> Previously, the settings could only be found by going into Account, and then Settings, which made it difficult for some users to find or even discover.</p></li>
-                        <div class="text-center">
-                            <img src="assets/canvas/navigation-2.png" class="project-image"/>
-                            <br>
-                            <small>Panel for settings, which is now accessible everywhere.</small>
-                        </div>
                         <li><p><b>Add a button with download text and icon indicator</b> to the right, since the toggles for the selecting which files to download were also at the right. Both the “download” text and icon were included to provide clarity. </p></li>
                         <li><p><b>Add an indication of the number of files selected, and button to deselect all files,</b> similar to when selecting emails in Gmail.</p></li>
-                        <div class="text-center">
-                            <img src="assets/canvas/navigation-3.png"/>
-                            <br>
-                            <small>Course home page with filters. Selected files can be downloaded.</small>
-                        </div>
                     </ul>
                 </div>
     
@@ -127,7 +117,7 @@
                         <li><p><b>Add a notification tab/panel,</b> which is accessible by clicking the notifications button, which would have a red badge if there were unread notifications.</p></li>
                         <li><p><b>Made font weight heavier and added a green dot for unread notifications</b>, making it more noticeable for users.</p></li>
                         <div class="text-center">
-                            <img src="assets/canvas/notifications-1.png"/>
+                            <img src="assets/canvas/notifications-1.gif"/>
                             <br>
                             <small>Notification panel.</small>
                         </div>
@@ -135,7 +125,7 @@
                         <li><p><b>Add other notification settings</b>, such as notifying when a deadline is close and a submission still hasn’t been made.</p></li>
                         <li><p><b>Add an add contact info button.</b></p></li>
                         <div class="text-center">
-                            <img src="assets/canvas/notifications-2.png"/>
+                            <img src="assets/canvas/notifications-2.gif"/>
                             <br>
                             <small>Notification settings page. The icon buttons were also changed to dropdowns.</small>
                         </div>
@@ -163,21 +153,16 @@
                     <ul>
                         <li><p><b>Simplify the toolbar for the textbox entry</b> to avoid overwhelming the user. The three text alignment buttons (left, center, right) were condensed into a single button, as well as the super- and subscript buttons.</p></li>
                         <li><p><b>Add a tab for “preview” mode</b> so users can easily switch back and forth between “preview” and “edit” mode (inspired by Github’s text editor).</p></li>
-                        <div class="text-center">
-                            <img src="assets/canvas/preparation-3.png"/>
-                            <br>
-                            <small>Preparing a text box entry for submitting assignments.</small>
-                        </div>
                         <li><p><b>Added a modal for showing users that an autosave feature has been implemented.</b> Some users told us that they didn’t realize that Canvas had an autosave feature, so we wanted to notify users.</p></li>
                         <li><p><b>Add “Autosaved on ...” to indicate that their work has been autosaved.</b> Previously (as far as we know), there wasn’t really any feedback from the platform to indicate this to the user.</p></li>
                         <div class="text-center">
-                            <img src="assets/canvas/preparation-1.png"/>
+                            <img src="assets/canvas/preparation-1.gif"/>
                             <br>
                             <small>Modal for notifying users of the autosave feature, as well as showing importance to indicator for last autosaved.</small>
                         </div>
                         <li><p><b>Add a full-screen mode for the text editor</b> for longer assignments.</p></li>
                         <div class="text-center">
-                            <img src="assets/canvas/preparation-2.png"/>
+                            <img src="assets/canvas/preparation-2.gif"/>
                             <br>
                             <small>Full-screen text editor.</small>
                         </div>
@@ -323,23 +308,10 @@
             <div class="parallax-layer top-layer">
                 <div class="tight space-l">
                     <div class="text-center">
-                        <img src="assets/canvas/navigation-1.png"/>
+                        <img src="assets/canvas/navigation-1.gif"/>
                         <br>
-                        <small>Course home page with filter options. Other sections were also condensed.</small>
+                        <small>Course home page with filter options. Other sections were also condensed. Selected files can be downloaded.</small>
                     </div>
-                    <br>
-                    <div class="text-center">
-                        <img src="assets/canvas/navigation-2.png" class="project-image"/>
-                        <br>
-                        <small>Panel for settings, which is now accessible everywhere.</small>
-                    </div>
-                    <br>
-                    <div class="text-center">
-                        <img src="assets/canvas/navigation-3.png"/>
-                        <br>
-                        <small>Course home page with filters. Selected files can be downloaded.</small>
-                    </div>
-                    <br>
                 </div>
             </div>
         </div>
@@ -375,13 +347,13 @@
             <div class="parallax-layer top-layer">
                 <div class="tight space-l">
                     <div class="text-center">
-                        <img src="assets/canvas/notifications-1.png"/>
+                        <img src="assets/canvas/notifications-1.gif"/>
                         <br>
                         <small>Notification panel.</small>
                     </div>
                     <br>
                     <div class="text-center">
-                        <img src="assets/canvas/notifications-2.png"/>
+                        <img src="assets/canvas/notifications-2.gif"/>
                         <br>
                         <small>Notification settings page. The icon buttons were also changed to dropdowns.</small>
                     </div>
@@ -425,19 +397,13 @@
             <div class="parallax-layer top-layer">
                 <div class="tight space-l">
                     <div class="text-center">
-                        <img src="assets/canvas/preparation-3.png"/>
+                        <img src="assets/canvas/preparation-1.gif"/>
                         <br>
-                        <small>Preparing a text box entry for submitting assignments.</small>
+                        <small>Preparing a text box entry for submitting assignments. Modal for notifying users of the autosave feature, as well as showing importance to indicator for last autosaved.</small>
                     </div>
                     <br>
                     <div class="text-center">
-                        <img src="assets/canvas/preparation-1.png"/>
-                        <br>
-                        <small>Modal for notifying users of the autosave feature, as well as showing importance to indicator for last autosaved.</small>
-                    </div>
-                    <br>
-                    <div class="text-center">
-                        <img src="assets/canvas/preparation-2.png"/>
+                        <img src="assets/canvas/preparation-2.gif"/>
                         <br>
                         <small>Full-screen text editor.</small>
                     </div>
