updated design system image size

--- a/canvas.html
+++ b/canvas.html
@@ -61,10 +61,15 @@
     
             <br class="small">
             <div class="text-center">
-                <img src="assets/canvas/design system.png"/>
+                <img src="assets/canvas/design system 1.png" class="design-system"/>
                 <br>
                 <small>Design system created in Figma.</small>
-            </div>          
+            </div>
+            <div class="text-center">
+                <img src="assets/canvas/design system 2.png" class="design-system"/>
+                <br>
+                <small>Design system created in Figma.</small>
+            </div>
         </div>
         <br class="large">
 
@@ -267,7 +272,12 @@
         
                 <br class="small">
                 <div class="text-center">
-                    <img src="assets/canvas/design system.png"/>
+                    <img src="assets/canvas/design system 1.png" class="design-system"/>
+                    <br>
+                    <small>Design system created in Figma.</small>
+                </div>
+                <div class="text-center">
+                    <img src="assets/canvas/design system 2.png" class="design-system"/>
                     <br>
                     <small>Design system created in Figma.</small>
                 </div>
